fix(breadcrumb): update styles for improved contrast

--- a/src/BreadCrumbs/BreadCrumbs.module.scss
+++ b/src/BreadCrumbs/BreadCrumbs.module.scss
@@ -4,8 +4,12 @@
   gap: var(--spacing-2xs);
 
   a.crumb {
-    color: var(--colors-primary-800);
+    color: var(--colors-neutral-900);
     font-weight: 500;
+
+    >span:hover {
+      text-decoration: underline;
+    }
   }
 
   span.crumb {
